<resources>
    <string name="app_id" translatable="false">com.gee12.mytetroid</string>
    <string name="title_open_tag_records">Open tag records</string>
    <string name="title_copy_link">Copy link</string>
    <string name="title_rename">Rename</string>
    <string name="title_app_mgit" translatable="false">MGit</string>
    <string name="pref_is_save_pass_hash_local">Save password</string>
    <string name="pref_is_save_pass_hash_local_summ">Save password hash locally \n(used as default value for new storages)</string>
    <string name="pref_is_save_pass_hash_local_summ_storage">Save password hash locally</string>
    <string name="pref_key_storage_path" translatable="false">pref_key_storage_path</string>
    <string name="pref_key_storage_name" translatable="false">pref_key_storage_name</string>
    <string name="pref_key_is_save_pass_hash_local" translatable="false">pref_key_is_save_pass_hash_local</string>
    <string name="pref_sub_category_history">History of opening</string>
    <string name="pref_sub_category_logs">Logs</string>
    <string name="pref_sub_category_search">Search</string>
    <string name="pref_is_keep_selected_node">Choose the last branch</string>
    <string name="pref_is_keep_selected_node_summ">Set the current branch selected last time \n(used as default value for new storages)</string>
    <string name="pref_is_keep_selected_node_summ_storage">Set the current branch selected last time</string>
    <string name="pref_key_is_keep_selected_node" translatable="false">pref_key_is_select_last_node</string>
    <string name="pref_when_ask_password">Ask for a password</string>
    <string name="pref_when_ask_password_summ">When to ask for a password? (used if no password hash is stored for the storage)</string>
    <string name="pref_key_when_ask_password" translatable="false">pref_key_when_aks_password</string>
    <string name="pref_when_ask_password_on_select">When choosing an encrypted node</string>
    <string name="pref_storage_path">Storage folder</string>
    <string name="pref_storage_path_summ">Path containing database.ini, mytetra.xml and base/</string>
    <string name="pref_key_is_decrypt_in_temp" translatable="false">pref_key_is_decrypt_in_temp</string>
    <string name="pref_trash_path">Common trash catalog</string>
    <string name="pref_trash_path_summ_storage">Trash catalog path for storage</string>
    <string name="pref_trash_path_summ">Common trash catalog path for all storages</string>
    <string name="pref_key_temp_path" translatable="false">pref_key_temp_path</string>
    <string name="pref_key_is_write_log" translatable="false">pref_key_is_write_log</string>
    <string name="pref_key_log_path" translatable="false">pref_key_log_path</string>
    <string name="pref_write_log_to_file">Is write log to file</string>
    <string name="pref_write_log_to_file_summ">Log events to file</string>
    <string name="pref_log_path">Logs catalog</string>
    <string name="pref_log_path_summ">Path to catalog with log file</string>
    <string name="pref_is_sync_storage">Sync storage</string>
    <string name="pref_is_sync_summ">The mechanism for transmitting a synchronization start command to the third-party application \n(used as default value for new storages)</string>
    <string name="pref_is_sync_summ_storage">The mechanism for transmitting a synchronization start command to the third-party application</string>
    <string name="pref_is_sync_before_loading">Sync before loading</string>
    <string name="pref_is_sync_before_loading_summ">Start synchronization before loading storage \n(used as default value for new storages)</string>
    <string name="pref_is_sync_before_loading_summ_storage">Start synchronization before loading storage</string>
    <string name="pref_is_sync_before_exit">Sync before exit</string>
    <string name="pref_is_sync_before_exit_summ">Start synchronization before exit from app \n(used as default value for new storages)</string>
    <string name="pref_is_sync_before_exit_summ_storage">Start synchronization before exit from app</string>
    <string name="pref_key_sync_command" translatable="false">pref_key_sync_command</string>
    <string name="pref_sync_command">Sync command</string>
    <string name="pref_sync_command_summ">A synchronization command or script, depends on a third-party application\nMacro% a - storage directory \n(used as default value for new storages)</string>
    <string name="pref_sync_command_mgit_summ_storage">A synchronization command for MGit, for example: \"git pull\"</string>
    <string name="pref_key_is_sync_storage" translatable="false">pref_key_is_sync_storage</string>
    <string name="pref_key_is_sync_before_init" translatable="false">pref_key_is_sync_before_init</string>
    <string name="pref_title_is_write_history">Write history</string>
    <string name="pref_title_is_write_history_summ">Write history for opening storage objects: records, nodes, tags, attached files</string>
    <string name="pref_title_history_max_size">History size</string>
    <string name="pref_title_history_write_mode">Write mode</string>
    <string name="pref_title_history_write_mode_summ_mask">In which mode will objects be recorded to history: %s</string>
    <string name="pref_key_is_write_history" translatable="false">pref_key_is_write_history</string>
    <string name="pref_key_history_max_size" translatable="false">pref_key_history_max_size</string>
    <string name="pref_key_history_write_mode" translatable="false">pref_key_history_write_mode</string>
    <string name="pref_key_is_ask_before_sync" translatable="false">pref_key_is_answer_before_sync</string>
    <string name="pref_key_is_ask_before_exit_sync" translatable="false">pref_key_is_answer_before_exit_sync</string>
    <string name="pref_ask_before_sync">Ask before sync</string>
    <string name="pref_ask_before_sync_summ">Show confirmation of synchronization start \n(used as default value for new storages)</string>
    <string name="pref_ask_before_sync_summ_storage">Show confirmation of synchronization start</string>
    <string name="pref_ask_before_sync_summ_exit_storage">Show confirmation of synchronization start before exit from app</string>
    <string name="pref_key_show_logs" translatable="false">pref_key_show_logs</string>
    <string name="pref_show_logs">Show logs</string>
    <string name="pref_show_logs_summ">The logs of the current startup session or the contents of the log file</string>
    <string name="pref_key_clear_search_history" translatable="false">pref_key_clear_search_history</string>
    <string name="pref_clear_search_history">Clear search history</string>
    <string name="pref_clear_trash">Clear trash</string>
    <string name="pref_common_clear_trash">Clear trash from all storages</string>
    <string name="pref_key_clear_trash" translatable="false">pref_key_clear_trash</string>
    <string name="pref_clear_trash_summ">Delete contents of trash folder</string>
    <string name="pref_common_clear_trash_summ">Delete contents of trash folder from all storages</string>
    <string name="pref_clear_search_history_summ">Delete query input hints and global search options</string>
    <string name="pref_decrypt_files_to_trash_dir">Decrypt files to directory</string>
    <string name="pref_decrypt_files_to_trash_dir_summ">Decrypt attachments to a trash directory when opening \n(used as default value for new storages)</string>
    <string name="pref_decrypt_files_to_trash_dir_summ_storage">Decrypt attachments to a trash directory when opening</string>
    <string name="pref_key_change_pass" translatable="false">pref_key_change_pass</string>
    <string name="pref_change_pass">Change password</string>
    <string name="pref_change_pass_summ">Change password and re-encrypt encrypted nodes</string>
    <string name="pref_key_is_load_favorites" translatable="false">pref_key_is_load_favorites</string>
    <string name="pref_load_only_favorites">Load only favorites (Pro)</string>
    <string name="pref_load_only_favorites_summ">To speed up the startup, first load only favorite entries \n(used as default value for new storages)</string>
    <string name="pref_load_only_favorites_summ_storage">To speed up the startup, first load only favorite entries</string>
    <string name="pref_key_check_outside_changing" translatable="false">pref_key_check_outside_changing</string>
    <string name="pref_check_outside_changing">Track outside changes</string>
    <string name="pref_check_outside_changing_summ">Check records tree for changes by third-party programs \n(used as default value for new storages)</string>
    <string name="pref_check_outside_changing_summ_storage">Check records tree for changes by third-party programs</string>
    <string name="pref_key_request_pin_code" translatable="false">pref_key_request_pin_code</string>
    <string name="pref_request_pin_code">Use PIN-code</string>
    <string name="pref_request_pin_code_summ">If the storage password is saved, prompt for a PIN to access encrypted data</string>
    <string name="pref_key_quickly_node_id" translatable="false">pref_key_quickly_node_id</string>
    <string name="pref_key_app_for_sync" translatable="false">pref_key_app_for_sync</string>
    <string name="pref_app_for_sync">Application</string>
    <string name="pref_app_for_sync_summ">Application used to start sync \n(used as default value for new storages)</string>
    <string name="pref_app_for_sync_summ_storage">Application used to start sync</string>
    <string name="pref_key_is_sync_before_exit" translatable="false">pref_key_is_sync_before_exit</string>
    <string name="pref_quickly_node">Node for quick insertion</string>
    <string name="pref_quickly_node_summ">The default node for records created using the widget or when sending data from third-party apps. Available if this is the default storage</string>
    <string name="pref_key_is_clear_trash_before_exit" translatable="false">pref_key_is_clear_trash_before_exit</string>
    <string name="pref_is_clear_trash_before_exit">Clear trash before exit</string>
    <string name="pref_is_clear_trash_before_exit_summ">(used as default value for new storages)</string>
    <string name="pref_key_is_ask_before_clear_trash_before_exit" translatable="false">pref_key_is_ask_before_clear_trash_before_exit</string>
    <string name="pref_is_ask_before_clear_trash_before_exit">Ask before cleaning?</string>
    <string name="pref_is_ask_before_clear_trash_before_exit_summ">(used as default value for new storages)</string>
    <string name="pref_key_sub_category_storage" translatable="false">pref_key_category_storage</string>
    <string name="pref_key_sub_category_history" translatable="false">pref_key_category_history</string>
    <string name="pref_key_sub_category_logs" translatable="false">pref_key_category_logs</string>
    <string name="pref_key_sub_category_search" translatable="false">pref_key_category_search</string>
    <string name="pref_sub_category_storage">Storage</string>
    <string name="pref_key_sub_category_other" translatable="false">pref_key_category_other</string>
    <string name="pref_sub_category_other">Other</string>
    <string name="pref_key_sub_category_trash" translatable="false">pref_key_category_trash</string>
    <string name="pref_sub_category_trash">Trash</string>
    <string name="pref_is_def_storage">Default storage</string>
    <string name="pref_is_def_storage_summ">Storage loaded on application startup</string>
    <string name="pref_storage_name">Storage name</string>
    <string name="pref_key_is_def_storage" translatable="false">pref_key_is_def_storage</string>
    <string name="pref_key_is_read_only" translatable="false">pref_key_is_read_only</string>
    <string name="pref_is_read_only">Read only</string>
    <string name="pref_is_read_only_summ">The storage cannot be changed from within the app (not implemented yet)</string>
    <string name="action_select">Select</string>
</resources>