<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:key="@string/pref_key_sub_category_storage" android:title="@string/pref_sub_category_storage">

        <Preference
            android:key="@string/pref_key_storage_path"
            android:summary="@string/pref_storage_path_summ"
            android:title="@string/pref_storage_path" />

        <EditTextPreference
            android:dialogTitle="@string/pref_storage_name"
            android:inputType="text"
            android:key="@string/pref_key_storage_name"
            android:title="@string/pref_storage_name" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_key_is_def_storage"
            android:summary="@string/pref_is_def_storage_summ"
            android:title="@string/pref_is_def_storage" />

        <com.gee12.mytetroid.views.DisabledCheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_key_is_read_only"
            android:summary="@string/pref_is_read_only_summ"
            android:title="@string/pref_is_read_only" />

    </PreferenceCategory>

    <PreferenceCategory android:key="@string/pref_key_sub_category_trash" android:title="@string/pref_sub_category_trash">

        <Preference
            android:key="@string/pref_key_temp_path"
            android:summary="@string/pref_trash_path_summ_storage"
            android:title="@string/pref_trash_path" />

        <Preference
            android:key="@string/pref_key_clear_trash"
            android:summary="@string/pref_clear_trash_summ"
            android:title="@string/pref_clear_trash" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_key_is_clear_trash_before_exit"
            android:title="@string/pref_is_clear_trash_before_exit" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="@string/pref_key_is_clear_trash_before_exit"
            android:key="@string/pref_key_is_ask_before_clear_trash_before_exit"
            android:title="@string/pref_is_ask_before_clear_trash_before_exit" />

    </PreferenceCategory>

    <PreferenceCategory android:key="@string/pref_key_sub_category_other" android:title="@string/pref_sub_category_other">

        <Preference
            android:key="@string/pref_key_quickly_node_id"
            android:summary="@string/pref_quickly_node_summ"
            android:title="@string/pref_quickly_node" />

        <com.gee12.mytetroid.views.DisabledCheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="@string/pref_key_is_load_favorites"
            android:summary="@string/pref_load_only_favorites_summ_storage"
            android:title="@string/pref_load_only_favorites" />

        <com.gee12.mytetroid.views.DisabledCheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_is_keep_selected_node"
            android:summary="@string/pref_is_keep_selected_node_summ_storage"
            android:title="@string/pref_is_keep_selected_node" />

    </PreferenceCategory>

</PreferenceScreen>
