<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="pref_key_screen">

    <PreferenceCategory android:key="@string/pref_key_sub_category_history" android:title="@string/pref_sub_category_history">

        <com.gee12.mytetroid.ui.base.views.prefs.DisabledCheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_is_write_history"
            android:summary="@string/pref_title_is_write_history_summ"
            android:title="@string/pref_title_is_write_history" />

        <com.gee12.mytetroid.ui.base.views.prefs.IntEditTextPreference
            android:defaultValue="100"
            android:dependency="@string/pref_key_is_write_history"
            android:dialogTitle="@string/pref_title_history_max_size"
            android:key="@string/pref_key_history_max_size"
            android:title="@string/pref_title_history_max_size" />

        <Preference
            android:dependency="@string/pref_key_is_write_history"
            android:key="@string/pref_key_history_write_mode"
            android:summary="@string/pref_title_history_write_mode_summ_mask"
            android:title="@string/pref_title_history_write_mode" />

    </PreferenceCategory>

    <PreferenceCategory android:key="@string/pref_key_sub_category_logs" android:title="@string/pref_sub_category_logs">

        <PreferenceScreen
            android:key="@string/pref_key_show_logs"
            android:summary="@string/pref_show_logs_summ"
            android:title="@string/pref_show_logs">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.gee12.mytetroid.ui.logs.LogsActivity"
                android:targetPackage="@string/app_id" />
        </PreferenceScreen>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_key_is_write_log"
            android:summary="@string/pref_write_log_to_file_summ"
            android:title="@string/pref_write_log_to_file" />

        <Preference
            android:dependency="@string/pref_key_is_write_log"
            android:key="@string/pref_key_log_path"
            android:summary="@string/pref_log_path_summ"
            android:title="@string/pref_log_path" />

    </PreferenceCategory>

    <PreferenceCategory android:key="@string/pref_key_sub_category_search" android:title="@string/pref_sub_category_search">

        <Preference
            android:key="@string/pref_key_clear_search_history"
            android:summary="@string/pref_clear_search_history_summ"
            android:title="@string/pref_clear_search_history" />

    </PreferenceCategory>

</PreferenceScreen>
