<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="pref_key_screen">

<!--    <CheckBoxPreference-->
<!--        android:defaultValue="true"-->
<!--        android:key="@string/pref_key_is_load_last_storage_path"-->
<!--        android:summary="@string/pref_is_load_last_storage_path_summ"-->
<!--        android:title="@string/pref_is_load_last_storage_path" />-->

    <Preference
        android:key="@string/pref_key_temp_path"
        android:summary="@string/pref_trash_path_summ"
        android:title="@string/pref_trash_path" />

    <Preference
        android:key="@string/pref_key_clear_trash"
        android:summary="@string/pref_common_clear_trash_summ"
        android:title="@string/pref_common_clear_trash" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_key_is_clear_trash_before_exit"
        android:summary="@string/pref_is_clear_trash_before_exit_summ"
        android:title="@string/pref_is_clear_trash_before_exit" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_key_is_ask_before_clear_trash_before_exit"
        android:summary="@string/pref_is_ask_before_clear_trash_before_exit_summ"
        android:title="@string/pref_is_ask_before_clear_trash_before_exit" />

    <com.gee12.mytetroid.ui.base.views.prefs.DisabledCheckBoxPreference
        android:defaultValue="false"
        android:disableDependentsState="true"
        android:key="@string/pref_key_is_load_favorites"
        android:summary="@string/pref_load_only_favorites_summ"
        android:title="@string/pref_load_only_favorites" />

    <com.gee12.mytetroid.ui.base.views.prefs.DisabledCheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_key_is_keep_selected_node"
        android:summary="@string/pref_is_keep_selected_node_summ"
        android:title="@string/pref_is_keep_selected_node" />

</PreferenceScreen>
