<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <com.gee12.mytetroid.views.DisabledPreference
            android:key="@string/pref_key_change_pass"
            android:title="@string/pref_change_pass"
            android:summary="@string/pref_change_pass_summ"/>

        <CheckBoxPreference
            android:key="@string/pref_key_is_save_pass_hash_local"
            android:disableDependentsState="true"
            android:title="@string/pref_is_save_pass_hash_local"
            android:summary="@string/pref_is_save_pass_hash_local_summ"
            android:defaultValue="true" />

        <com.gee12.mytetroid.views.DisabledCheckBoxPreference
            android:key="@string/pref_key_request_pin_code"
            android:title="@string/pref_request_pin_code"
            android:summary="@string/pref_request_pin_code_summ"
            android:defaultValue="false" />

        <com.gee12.mytetroid.views.DisabledListPreference
            android:key="@string/pref_key_when_ask_password"
            android:dependency="@string/pref_key_is_save_pass_hash_local"
            android:title="@string/pref_when_ask_password"
            android:entries="@array/when_ask_password_entries"
            android:entryValues="@array/when_ask_password_entries"
            android:summary="@string/pref_when_ask_password_summ"
            android:defaultValue="@string/pref_when_ask_password_on_select"
            />

        <CheckBoxPreference
            android:key="@string/pref_key_is_decrypt_in_temp"
            android:title="@string/pref_decrypt_files_to_trash_dir"
            android:summary="@string/pref_decrypt_files_to_trash_dir_summ"
            android:defaultValue="false" />

</PreferenceScreen>
