<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="pref_key_screen">

    <!--    <com.gee12.mytetroid.views.DisabledCheckBoxPreference-->
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_key_is_sync_storage"
        android:summary="@string/pref_is_sync_summ"
        android:title="@string/pref_is_sync_storage" />

    <com.gee12.mytetroid.views.DisabledListPreference
        android:defaultValue="@string/app_mgit"
        android:dependency="@string/pref_key_is_sync_storage"
        android:entries="@array/sync_apps"
        android:entryValues="@array/sync_apps"
        android:key="@string/pref_key_app_for_sync"
        android:summary="@string/pref_app_for_sync_summ"
        android:title="@string/pref_app_for_sync" />

    <EditTextPreference
        android:dependency="@string/pref_key_is_sync_storage"
        android:dialogTitle="@string/pref_sync_command"
        android:inputType="text"
        android:key="@string/pref_key_sync_command"
        android:summary="@string/pref_sync_command_summ"
        android:title="@string/pref_sync_command" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="@string/pref_key_is_sync_storage"
        android:key="@string/pref_key_is_sync_before_init"
        android:summary="@string/pref_is_sync_before_loading_summ"
        android:title="@string/pref_is_sync_before_loading" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="@string/pref_key_is_sync_storage"
        android:key="@string/pref_key_is_sync_before_exit"
        android:summary="@string/pref_is_sync_before_exit_summ"
        android:title="@string/pref_is_sync_before_exit" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="@string/pref_key_is_sync_before_init"
        android:key="@string/pref_key_is_ask_before_sync"
        android:summary="@string/pref_ask_before_sync_summ"
        android:title="@string/pref_ask_before_sync" />

<!--    <CheckBoxPreference-->
<!--        android:defaultValue="false"-->
<!--        android:dependency="@string/pref_key_is_sync_storage"-->
<!--        android:key="@string/pref_key_is_not_remember_sync_app"-->
<!--        android:summary="@string/pref_is_not_remember_sync_app_summ"-->
<!--        android:title="@string/pref_is_not_remember_sync_app" />-->

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_key_check_outside_changing"
        android:summary="@string/pref_check_outside_changing_summ"
        android:title="@string/pref_check_outside_changing" />

</PreferenceScreen>
